--- a/QuizApp/app/src/main/res/values/themes.xml
+++ b/QuizApp/app/src/main/res/values/themes.xml
@@ -6,4 +6,8 @@
     </style>
 
     <style name="Theme.QuizApp" parent="Base.Theme.QuizApp" />
+
+    <style name="ShapeAppearanceOverlay.App.CornerSize50Percent" parent="">
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
